--- a/src/components/welcome/welcome.css
+++ b/src/components/welcome/welcome.css
@@ -1,12 +1,11 @@
 .welcome{
-    display: flex;
-    justify-content: center;
+   
     background-color: skyblue;
     width: 100%;
     height: 650px;
 }
 .welcome-text{
-    margin: 3rem;
+    padding: 3rem;
 }
 .welcome-text h2{
     text-align: center;
@@ -15,4 +14,22 @@
     font-size: 50px;
     font-weight: 700;
 
+}
+
+
+.logout-btn{
+    text-align:center;
+    background-color:red;
+    color: white;
+    padding: 1rem;
+    font-size: 15px;
+    border: none;
+    border-radius: 10px;
+    margin:1rem;
+
+}
+
+.logout-btn:hover{
+    cursor:pointer;
+    background-color: brown;
 }
