--- a/src/components/register/register.css
+++ b/src/components/register/register.css
@@ -11,21 +11,7 @@
 
 }
 
-.contactform-heading{
-    display: flex;
-    justify-content: center;
-   
 
-}
-.contactform-heading h2{
-    font-size: 45px;
-    font-weight: 800;
-    line-height: 60px;
-    font-style: italic;
-    color: white;
-    text-align: center;
-    
-}
 .contactform-form{
     background-color: white;
     position: absolute;
@@ -34,27 +20,24 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    border-radius: 5px;
 }
-.contactform-form p{
-    text-align: center;
-    color: red;
-    font-size: 20px;
-    font-weight: 500;
+.signup-heading h2{
+    color: rgb(8, 8, 70);
+    font-size: 35px;
+    font-weight: 700;
+    font-style:oblique;
     margin: 0;
-    padding-top: 1rem;
+    padding: 10px;
 }
 
-.contactform-form h1{
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    color:black;
-}
+
 .form{
     display:flex;
     justify-content:center;
     flex-wrap:wrap;
-    margin:2rem 0;
+    margin:1rem 0;
+   
 }
 .form-section{
     display:flex;
