--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -58,16 +58,21 @@
         background-color: rgb(32, 31, 31);
         margin: 0 5px;
     }
-    .reg-btn{
-        background-color: rgb(241, 235, 235);
+    .reg__btn{
+        text-align:center;
+        background-color:transparent;
+        color: black;
         padding: 1rem;
         font-size: 15px;
+        border: 1px solid black;
+        border-radius: 30px;
         
-        border-radius: 50px;
-        margin:1rem;
-        width: 100%;
+        width:100%;
 
     }
     .login-butons{
         margin-top: 1rem;
+    }
+    .orm-btn{
+        width: 100%;
     }
